do not unlock tables early if we have subquery in HAVING clause (BUG#3984)